# BUILD METADATA

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# PROJECT METADATA

[project]

# Package name

name = "TOPGrid_MORL"
version = "0.1.0"

# Authors

authors = [
    {name = "Thomas Lautenbacher", email = "t.lautenbacher@campus.tu-berlin.de"},
    {name = "Davide Barbieri", email = "davide.barbieri@tennet.eu"},
    {name = "Jan Viebahn", email = "jan.viebhan@tennet.eu"}
]

# Package info

description = "Multi-Objective Reinforcement Learning for Topology Optimization of the Power Grid"
readme = "README.md"

keywords = ["rl", "grid2op", "MORL"] 

license = {text = "LICENSE"} 

classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

# Requirements and dependencies

requires-python = ">=3.12"

dependencies = [
  "Grid2Op==1.10.*",
  "gymnasium==0.29.*",
  "h5py==3.11.0",
  "ipykernel==6.29.*", 
  "lightSim2Grid==0.8.*", 
  "mo-gymnasium==1.1.*",
  "morl-baselines==1.0.*",
  "numpy==1.26.*", 
  "pandapower==2.14.*", 
  "pandas==2.2.*",  
  "scikit-learn==1.4.*", 
  "scipy==1.13.*",
  "seaborn==0.13.*",
  "torch==2.3.*", 
  "tqdm==4.66.*", 
  "typing==3.7.*", 
  "wandb==0.17.*"
]

[project.optional-dependencies]
dev = [
  "black==23.3.*",
  "flake8==6.0.*",
  "pylint==2.17.*",
  "autoflake==2.1.*",
  "mypy==1.2.*",
  "hypothesis==6.75.*",
  "pytest==7.3.*",
  "pytest-cov==4.0.*",
  "tox==3.28.*",
  "pre-commit==3.3.*",
  "pre-commit-hooks==4.4.*",
  "jupyterlab==4.0.*",
  "pylint-print==1.0.*",
  "ruff==0.4.*",
  "flake8-junit-report",
  "flake8-print",
  "flake8-pyproject",
  "isort",
  "pep8-naming",
  "pytest-dotenv",
  "pytest-mock",
  "typeguard",
]

# Tools settings

# Coverage

[tool.coverage.run]
branch = true
parallel = true
source = ["topgrid_morl"]

[tool.coverage.report]
fail_under = 90
precision = 0
show_missing = true
skip_covered = false
skip_empty = false
sort = "Cover"

[tool.coverage.paths]
source = [
   "src",
   ".tox/*/lib/site-packages/src",
   ".tox/*/lib/python*/site-packages/src",
   ".tox/pypy*/site-packages/src",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage-report.xml"

# Flake8

[tool.flake8]
max-complexity = 10
max-line-length = 125
extend-ignore=["E203", "C901"]

# Isort

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# Pylint

[tool.pylint.'MESSAGES CONTROL']

disable= [
  "fixme",
  "too-few-public-methods",
  "chained-comparison",
  "duplicate-code",
  "too-many-ancestors",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "protected-access",
  "unused-argument",
  "assignment-from-no-return",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-statements",
]

max-line-length=125
max-args = 9
max-attributes = 9
load-plugins=["pylint_print"]

# Pytest

[tool.pytest.ini_options]
addopts = [
  "--durations=5",
  "--junit-xml=test-report.xml",
  "--new-first",
  "--show-capture=all",
  "--verbosity=4",
]
junit_family = "legacy"
testpaths = ["tests"]

[tool.mypy]

follow_imports = "skip"
strict = true
ignore_missing_imports = true
install_types = true
non_interactive = true
allow_subclassing_any = true
allow_untyped_calls = true
warn_unused_ignores = false
explicit_package_bases = true